--- a/VECTOR/VECTOR/VECTOR.vcxproj.filters
+++ b/VECTOR/VECTOR/VECTOR.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="main.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="Vector.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
